--- a/package.json
+++ b/package.json
@@ -15,10 +15,5 @@
     "url": "https://github.com/WaliUllahMilton/school-management-system/issues"
   },
   "homepage": "https://github.com/WaliUllahMilton/school-management-system#readme",
-  "description": "",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.5.1"
-  }
+  "description": ""
 }
