teacher studen adminstrator model add

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-DB = mongodb+srv://milton:12345@cluster0.ukmnle3.mongodb.net/
+DB = mongodb+srv://milton:12345@cluster0.ukmnle3.mongodb.net/school-management-system
