--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ coverage
 # nyc test coverage
 .nyc_output
 #dotenv
+backend/.env
 .env
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
