--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "glob": "^11.0.0",
     "inflight": "^1.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "rimraf": "^6.0.1",
     "slick-carousel": "^1.8.1"
   },
