--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "inflight": "^1.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
