--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "rimraf": "^6.0.1",
     "slick-carousel": "^1.8.1"
   },
